--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,8 @@
   "main": "src/app.js",
   "type": "module",
   "scripts": {
-    "dev": "nodemon src/app.js"
+    "dev": "nodemon src/app.js",
+    "seed:products": "node seedProducts.js"
   },
   "keywords": [],
   "author": "",
@@ -19,6 +20,7 @@
     "jsonwebtoken": "^9.0.2",
     "modules": "^0.4.0",
     "mongoose": "^9.0.0",
+    "multer": "^2.0.2",
     "mysql2": "^3.15.3",
     "node": "^20.19.6",
     "sanitize-html": "^2.17.0",
