--- a/backend/package.json
+++ b/backend/package.json
@@ -23,6 +23,8 @@
     "multer": "^2.0.2",
     "mysql2": "^3.15.3",
     "node": "^20.19.6",
+    "passport": "^0.7.0",
+    "passport-google-oauth20": "^2.0.0",
     "sanitize-html": "^2.17.0",
     "sequelize": "^6.37.7",
     "swagger-jsdoc": "^6.2.8",
